@@ -1,5 +1,8 @@
 Date	Added
 
+2007/04/03
+	* Added hom_setting&0x40, when set it clears the "can't reuse" skill delay
+	  when you vaporize a homunculus (set by default). [Skotlex]
 2007/04/02
 	* Set the default vending tax to 2% as it is in kRO Sakray [Playtester]
 2007/03/28
